--- a/config.ini
+++ b/config.ini
@@ -14,7 +14,7 @@ STD_ZOOM = 0.0025
 
 [LABEL]
 OBJECT_CLASSES = car, truck, pedestrian
-STD_LABEL_FORMAT = kitti
+STD_LABEL_FORMAT = center
 EXPORT_PRECISION = 6
 MIN_BOUNDINGBOX_DIMENSION = 0.01
 STD_BOUNDINGBOX_LENGTH = 0.75
