Updated README.md; Added STD_CLASS parameter

--- a/config.ini
+++ b/config.ini
@@ -14,6 +14,7 @@ STD_ZOOM = 0.0025
 
 [LABEL]
 OBJECT_CLASSES = car, truck, pedestrian
+STD_OBJECT_CLASS = box
 STD_LABEL_FORMAT = center
 EXPORT_PRECISION = 6
 MIN_BOUNDINGBOX_DIMENSION = 0.01
