Added *.bin support

--- a/config.ini
+++ b/config.ini
@@ -13,8 +13,8 @@ STD_TRANSLATION = 0.03
 STD_ZOOM = 0.0025
 
 [LABEL]
-OBJECT_CLASSES = car, truck, pedestrian
-STD_OBJECT_CLASS = box
+OBJECT_CLASSES = cart, box
+STD_OBJECT_CLASS = cart
 STD_LABEL_FORMAT = center
 EXPORT_PRECISION = 6
 MIN_BOUNDINGBOX_DIMENSION = 0.01
