Added coloring colorless point clouds (new default!)

--- a/config.ini
+++ b/config.ini
@@ -9,6 +9,8 @@ LABEL_FOLDER = labels/
 POINT_SIZE = 4
 ; Point color for colorless point clouds (r,g,b)
 COLORLESS_COLOR = 0.9, 0.9, 0.9
+; Colerize colorless point clouds by height value
+COLORLESS_COLORIZE = True
 STD_TRANSLATION = 0.03
 STD_ZOOM = 0.0025
 
