--- a/config.ini
+++ b/config.ini
@@ -15,9 +15,9 @@ STD_TRANSLATION = 0.03
 STD_ZOOM = 0.0025
 
 [LABEL]
+LABEL_FORMAT = centroid_rel
 OBJECT_CLASSES = cart, box
 STD_OBJECT_CLASS = cart
-STD_LABEL_FORMAT = center
 EXPORT_PRECISION = 6
 MIN_BOUNDINGBOX_DIMENSION = 0.01
 STD_BOUNDINGBOX_LENGTH = 0.75
