Updating config.ini to new parameter.

--- a/config.ini
+++ b/config.ini
@@ -15,10 +15,11 @@ STD_TRANSLATION = 0.03
 STD_ZOOM = 0.0025
 
 [LABEL]
-LABEL_FORMAT = centroid_rel
-EXPORT_PRECISION = 6
+LABEL_FORMAT = centroid_abs
 OBJECT_CLASSES = cart, box
 STD_OBJECT_CLASS = cart
+Z_ROTATION_ONLY = True
+EXPORT_PRECISION = 6
 MIN_BOUNDINGBOX_DIMENSION = 0.01
 STD_BOUNDINGBOX_LENGTH = 0.75
 STD_BOUNDINGBOX_WIDTH = 0.55
