Refactoring of models

--- a/config.ini
+++ b/config.ini
@@ -15,7 +15,7 @@ STD_TRANSLATION = 0.03
 STD_ZOOM = 0.0025
 
 [LABEL]
-LABEL_FORMAT = centroid_abs
+LABEL_FORMAT = vertices
 OBJECT_CLASSES = cart, box
 STD_OBJECT_CLASS = cart
 Z_ROTATION_ONLY = True
