--- a/labelCloud/ressources/default_config.ini
+++ b/labelCloud/ressources/default_config.ini
@@ -20,6 +20,7 @@ OBJECT_CLASSES = cart, box
 STD_OBJECT_CLASS = cart
 Z_ROTATION_ONLY = True
 EXPORT_PRECISION = 6
+VIEWING_PRECISION = 3
 MIN_BOUNDINGBOX_DIMENSION = 0.01
 STD_BOUNDINGBOX_LENGTH = 0.75
 STD_BOUNDINGBOX_WIDTH = 0.55
