--- a/config.ini
+++ b/config.ini
@@ -11,25 +11,43 @@ POINT_SIZE = 4
 COLORLESS_COLOR = 0.9, 0.9, 0.9
 ; Colerize colorless point clouds by height value
 COLORLESS_COLORIZE = True
+; Standard step for point cloud translation
 STD_TRANSLATION = 0.03
+; Standard step for zooming
 STD_ZOOM = 0.0025
 
 [LABEL]
+; Format for exporting labels. Choose from (vertices, centroid_rel, centroid_abs, kitti)
 LABEL_FORMAT = centroid_abs
+; List of object classes for autocompletion in the text field
 OBJECT_CLASSES = cart, box
+; Default object class for new bounding boxes
 STD_OBJECT_CLASS = cart
+; Only allow z-rotation of bounding boxes. Set False to also label x- & y-rotation
 Z_ROTATION_ONLY = True
+; Number of decimal places for exporting the bounding box parameter.
 EXPORT_PRECISION = 8
+; Number of decimal places shown for the parameters of the active bounding box.
 VIEWING_PRECISION = 3
+; Minimum value for the length, width and height of a bounding box.
 MIN_BOUNDINGBOX_DIMENSION = 0.01
+; Default length of the bounding box (for picking mode)
 STD_BOUNDINGBOX_LENGTH = 0.75
+; Default width of the bounding box (for picking mode)
 STD_BOUNDINGBOX_WIDTH = 0.55
+; Default height of the bounding box (for picking mode)
 STD_BOUNDINGBOX_HEIGHT = 0.15
+; Standard step for translating the bounding box (meter)
 STD_TRANSLATION = 0.03
+; Standard step for rotating the bounding box (degree)
 STD_ROTATION = 0.5
+; Standard step for scaling the bounding box
 STD_SCALING = 0.03
 
 [SETTINGS]
+; Background color of the point cloud viewer (rgb)
 BACKGROUND_COLOR = 100, 100, 100
+; Visualizes the pointcloud floor (x-y-plane) as a grid
 SHOW_FLOOR = True
+; Visualizes the object's orientation with an arrow
 SHOW_ORIENTATION = True
