Rename config section

--- a/config.ini
+++ b/config.ini
@@ -44,7 +44,7 @@ STD_ROTATION = 0.5
 ; Standard step for scaling the bounding box
 STD_SCALING = 0.03
 
-[SETTINGS]
+[USER_INTERFACE]
 ; Background color of the point cloud viewer (rgb)
 BACKGROUND_COLOR = 100, 100, 100
 ; Visualizes the pointcloud floor (x-y-plane) as a grid
