Changed config setup

--- a/config.ini
+++ b/config.ini
@@ -1,53 +1,55 @@
 [FILE]
-; Source of point clouds
-POINTCLOUD_FOLDER = pointclouds/
-; Sink for label files
-LABEL_FOLDER = labels/
+; source of point clouds
+pointcloud_folder = pointclouds/
+; sink for label files
+label_folder = labels/
 
 [POINTCLOUD]
-; Drawing size for points in point cloud
-POINT_SIZE = 4
-; Point color for colorless point clouds (r,g,b)
-COLORLESS_COLOR = 0.9, 0.9, 0.9
-; Colerize colorless point clouds by height value
-COLORLESS_COLORIZE = True
-; Standard step for point cloud translation
-STD_TRANSLATION = 0.03
-; Standard step for zooming
-STD_ZOOM = 0.0025
+; drawing size for points in point cloud
+point_size = 4.0
+; point color for colorless point clouds (r,g,b)
+colorless_color = 0.9, 0.9, 0.9
+; colerize colorless point clouds by height value
+colorless_colorize = True
+; standard step for point cloud translation (for mouse move)
+std_translation = 0.03
+; standard step for zooming (for scrolling)
+std_zoom = 0.0025
 
 [LABEL]
-; Format for exporting labels. Choose from (vertices, centroid_rel, centroid_abs, kitti)
-LABEL_FORMAT = centroid_abs
-; List of object classes for autocompletion in the text field
-OBJECT_CLASSES = cart, box
-; Default object class for new bounding boxes
-STD_OBJECT_CLASS = cart
-; Only allow z-rotation of bounding boxes. Set False to also label x- & y-rotation
-Z_ROTATION_ONLY = True
-; Number of decimal places for exporting the bounding box parameter.
-EXPORT_PRECISION = 8
-; Number of decimal places shown for the parameters of the active bounding box.
-VIEWING_PRECISION = 3
-; Minimum value for the length, width and height of a bounding box.
-MIN_BOUNDINGBOX_DIMENSION = 0.01
-; Default length of the bounding box (for picking mode)
-STD_BOUNDINGBOX_LENGTH = 0.75
-; Default width of the bounding box (for picking mode)
-STD_BOUNDINGBOX_WIDTH = 0.55
-; Default height of the bounding box (for picking mode)
-STD_BOUNDINGBOX_HEIGHT = 0.15
-; Standard step for translating the bounding box (meter)
-STD_TRANSLATION = 0.03
-; Standard step for rotating the bounding box (degree)
-STD_ROTATION = 0.5
-; Standard step for scaling the bounding box
-STD_SCALING = 0.03
+; format for exporting labels. choose from (vertices, centroid_rel, centroid_abs, kitti)
+label_format = centroid_abs
+; list of object classes for autocompletion in the text field
+object_classes = cart, box
+; default object class for new bounding boxes
+std_object_class = cart
+; only allow z-rotation of bounding boxes. set false to also label x- & y-rotation
+z_rotation_only = True
+; number of decimal places for exporting the bounding box parameter.
+export_precision = 8
+; default length of the bounding box (for picking mode)
+std_boundingbox_length = 0.75
+; default width of the bounding box (for picking mode)
+std_boundingbox_width = 0.55
+; default height of the bounding box (for picking mode)
+std_boundingbox_height = 0.15
+; standard step for translating the bounding box with button or key (in meter)
+std_translation = 0.03
+; standard step for rotating the bounding box with button or key (in degree)
+std_rotation = 0.5
+; standard step for scaling the bounding box  with button
+std_scaling = 0.03
+; minimum value for the length, width and height of a bounding box
+min_boundingbox_dimension = 0.01
+min_bounding_box_dimension = 0.01
 
 [USER_INTERFACE]
-; Background color of the point cloud viewer (rgb)
-BACKGROUND_COLOR = 100, 100, 100
-; Visualizes the pointcloud floor (x-y-plane) as a grid
-SHOW_FLOOR = True
-; Visualizes the object's orientation with an arrow
-SHOW_ORIENTATION = True
+; background color of the point cloud viewer (rgb)
+background_color = 100, 100, 100
+; visualizes the pointcloud floor (x-y-plane) as a grid
+show_floor = True
+; visualizes the object's orientation with an arrow
+show_orientation = True
+; number of decimal places shown for the parameters of the active bounding box
+viewing_precision = 2
+
