--- a/.github/workflows/integration-tests.yml
+++ b/.github/workflows/integration-tests.yml
@@ -1,7 +1,9 @@
 name: Integration Tests
 on: [push, pull_request]
+
 jobs:
-  build:
+
+  testing:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
@@ -13,22 +15,27 @@ jobs:
     steps:
     - name: Get repository
       uses: actions/checkout@v2
+
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
+
     - name: setup ${{ matrix.os }}
       run: |
         sudo apt install libxkbcommon-x11-0 libxcb-icccm4 libxcb-image0 libxcb-keysyms1 libxcb-randr0 libxcb-render-util0 libxcb-xinerama0 libxcb-xfixes0
         /sbin/start-stop-daemon --start --quiet --pidfile /tmp/custom_xvfb_99.pid --make-pidfile --background --exec /usr/bin/Xvfb -- :99 -screen 0 1920x1200x24 -ac +extension GLX
-    - name: install glut
+
+    - name: Install freeglut
       run: |
         sudo apt-get install freeglut3 freeglut3-dev
-    - name: install dependencies
+
+    - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install flake8 pytest
         pip install -r requirements.txt
+
     - name: Test with pytest
       run: |
-        python -m pytest tests/test_gui.py
+        python -m pytest tests/integration/
