--- a/labelCloud/ressources/default_config.ini
+++ b/labelCloud/ressources/default_config.ini
@@ -51,4 +51,6 @@ show_orientation = True
 background_color = 100, 100, 100
 ; number of decimal places shown for the parameters of the active bounding box
 viewing_precision = 2
-
+; near and far clipping plane for OpenGL (where objects are visible, in meter)
+near_plane=0.1
+far_plane=300
