Keep perspective between point clouds
 - add setting to keep perspective between point cloud changes
 - takes the last perspective before loading the new point cloud

Relates: #24

--- a/config.ini
+++ b/config.ini
@@ -51,6 +51,9 @@ show_orientation = True
 background_color = 100, 100, 100
 ; number of decimal places shown for the parameters of the active bounding box
 viewing_precision = 2
-; near and far clipping plane for OpenGL (where objects are visible, in meter)
-near_plane=0.1
-far_plane=300
+; near and far clipping plane for opengl (where objects are visible, in meter)
+near_plane = 0.1
+far_plane = 300
+; keep last perspective between point clouds
+keep_perspective = False
+
