--- a/labelCloud/ressources/default_config.ini
+++ b/labelCloud/ressources/default_config.ini
@@ -54,3 +54,5 @@ viewing_precision = 2
 ; near and far clipping plane for OpenGL (where objects are visible, in meter)
 near_plane=0.1
 far_plane=300
+; keep last perspective between point clouds
+keep_perspective = False
