Add .gitignore/Update image_path/Add config image_path

--- a/config.ini
+++ b/config.ini
@@ -3,6 +3,8 @@
 pointcloud_folder = pointclouds/
 ; sink for label files
 label_folder = labels/
+;2d image folder
+image_folder = pointclouds/
 
 [POINTCLOUD]
 ; drawing size for points in point cloud
