Add 2D image viewer (#44)
* add a 2D image viewer that shows related images
* add a new setting in config and GUI to activate the image viewer

Closes: #34 

Co-authored-by: ch-sa <christoph.sager@gmail.com>

--- a/config.ini
+++ b/config.ini
@@ -3,6 +3,8 @@
 pointcloud_folder = pointclouds/
 ; sink for label files
 label_folder = labels/
+;2d image folder
+image_folder = pointclouds/
 
 [POINTCLOUD]
 ; drawing size for points in point cloud
@@ -56,3 +58,6 @@ near_plane = 0.1
 far_plane = 300
 ; keep last perspective between point clouds
 keep_perspective = False
+; show button to visualize related images in a separate window
+show_2d_image = False
+
