Restructure project to comply with pip
 - use relative imports
 - use pkg_ressource for paths
 - move tests inside package
 - update setup.py
 - bump version

--- a/.gitignore
+++ b/.gitignore
@@ -177,3 +177,4 @@ cython_debug/
 !.vscode/*.code-snippets
 
 # End of https://www.toptal.com/developers/gitignore/api/visualstudiocode,python
+.vscode/launch.json
