--- a/.github/workflows/integration-tests.yml
+++ b/.github/workflows/integration-tests.yml
@@ -39,4 +39,4 @@ jobs:
 
     - name: Test with pytest
       run: |
-        python -m pytest tests/integration/
+        python -m pytest labelCloud/tests/integration/
