--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -37,4 +37,4 @@ jobs:
 
     - name: Test with pytest
       run: |
-        python -m pytest tests/unit/
+        python -m pytest labelCloud/tests/unit/
