Update setup and docs
 - make setup.py load the README.md
 - update the README and documentation
 - update the requirement versioning

--- a/labelCloud/ressources/default_config.ini
+++ b/labelCloud/ressources/default_config.ini
@@ -56,3 +56,5 @@ near_plane=0.1
 far_plane=300
 ; keep last perspective between point clouds
 keep_perspective = False
+; show button to visualize related images in a separate window
+show_2d_image = False
