Add example mode
 - add a mode that creates a project with an example point cloud and
 label as well as the default config

--- a/setup.cfg
+++ b/setup.cfg
@@ -64,3 +64,4 @@ tests = pytest; pytest-qt
 labelcloud.ressources = *
 labelcloud.ressources.icons = *
 labelcloud.ressources.interfaces = *
+labelcloud.ressources.examples = *
