--- a/setup.cfg
+++ b/setup.cfg
@@ -31,6 +31,7 @@ classifiers =
     Topic :: Multimedia :: Graphics :: Viewers
 
 [options]
+zip_safe = False
 packages =
     labelCloud
     labelCloud.control
@@ -38,13 +39,13 @@ packages =
     labelCloud.label_formats
     labelCloud.labeling_strategies
     labelCloud.model
+    labelCloud.ressources
+    labelCloud.ressources.examples
     labelCloud.ressources.icons
     labelCloud.ressources.interfaces
-    labelCloud.ressources
     labelCloud.tests
     labelCloud.utils
     labelCloud.view
-zip_safe = False
 install_requires =
     numpy
     open3d
@@ -61,7 +62,7 @@ console_scripts =
 tests = pytest; pytest-qt
 
 [options.package_data]
-labelcloud.ressources = *
-labelcloud.ressources.icons = *
-labelcloud.ressources.interfaces = *
-labelcloud.ressources.examples = *
+labelCloud.ressources = *.ini, *.pcd, *.txt
+labelCloud.ressources.examples = *.json, *.ply
+labelCloud.ressources.icons = *.ico, *.png, *.svg, *.txt
+labelCloud.ressources.interfaces = *.ui
