--- a/setup.cfg
+++ b/setup.cfg
@@ -39,10 +39,10 @@ packages =
     labelCloud.label_formats
     labelCloud.labeling_strategies
     labelCloud.model
-    labelCloud.ressources
-    labelCloud.ressources.examples
-    labelCloud.ressources.icons
-    labelCloud.ressources.interfaces
+    labelCloud.resources
+    labelCloud.resources.examples
+    labelCloud.resources.icons
+    labelCloud.resources.interfaces
     labelCloud.tests
     labelCloud.utils
     labelCloud.view
@@ -62,7 +62,7 @@ console_scripts =
 tests = pytest; pytest-qt
 
 [options.package_data]
-labelCloud.ressources = *.ini, *.pcd, *.txt
-labelCloud.ressources.examples = *.json, *.ply
-labelCloud.ressources.icons = *.ico, *.png, *.svg, *.txt
-labelCloud.ressources.interfaces = *.ui
+labelCloud.resources = *.ini, *.pcd, *.txt
+labelCloud.resources.examples = *.json, *.ply
+labelCloud.resources.icons = *.ico, *.png, *.svg, *.txt
+labelCloud.resources.interfaces = *.ui
