Create io module
 - package will all import export logic
 - moving label formats there

--- a/setup.cfg
+++ b/setup.cfg
@@ -36,7 +36,9 @@ packages =
     labelCloud
     labelCloud.control
     labelCloud.definitions
-    labelCloud.label_formats
+    labelCloud.io
+    labelCloud.io.labels
+    labelCloud.io.pointclouds
     labelCloud.labeling_strategies
     labelCloud.model
     labelCloud.resources
