Skip write buffer
 - windows crashes if vbo is loaded with first point cloud
 - skip write_vbo for first point cloud
 - fix github pipelines
   - add windows to unit tests
   - add python versions to test matrix
   - update version path in setup.cfg
   - drop limitation of PyQt5 version for windows

Closes: #67

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = labelCloud
-version = attr: labelCloud.__version__
+version = attr: labelCloud.__init__.__version__
 maintainer = Christoph Sager
 maintainer_email = christoph.sager@gmail.com
 license = GNU General Public License v3.0
@@ -52,8 +52,7 @@ install_requires =
     numpy
     open3d
     PyOpenGL
-    PyQt5 <= 5.14.1;platform_system=='Windows'
-    PyQt5;platform_system!='Windows'
+    PyQt5
 python_requires = >=3.6
 
 [options.entry_points]
