--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -7,22 +7,22 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest]  # macos-latest, 
-        python-version: [3.7, 3.8]
+        os: [ubuntu-latest, windows-latest]  # macos-latest has OpenGL import error
+        python-version: ["3.7", "3.8", "3.9"]  # "3.10" wait for Open3D support
 
     steps:
     - name: Get repository
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3
 
-    - name: Set up Python 3.8
-      uses: actions/setup-python@v2
+    - name: Set up Python ${{ matrix.python-version }}
+      uses: actions/setup-python@v3
       with:
         python-version: ${{ matrix.python-version }}
 
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
-        pip install flake8 pytest
+        python -m pip install --upgrade pip setuptools wheel
+        pip install flake8
         pip install .[tests]
 
     - name: Lint with flake8
