Introduce Segmentation Handler
- Introduce a new base class `BaseSegmentationHandler` to handle segmentation labels and implement label reader

--- a/config.ini
+++ b/config.ini
@@ -1,3 +1,9 @@
+[MODE]
+segmentation = True
+
+[SEGMENTATION]
+label_definition_path = pointclouds/label_definition.json
+
 [FILE]
 ; source of point clouds
 pointcloud_folder = pointclouds/
