--- a/.gitignore
+++ b/.gitignore
@@ -8,11 +8,14 @@
 *.pyc
 *.pcd
 *.qt_for_python
+*.bin
 .idea
 
 !labelCloud/resources/examples/exemplary.ply
 !labelCloud/resources/examples/exemplary.json
 !labelCloud/resources/labelCloud_icon.pcd
+!labels/segmentation/schema/label_definition.json
+!labels/segmentation/exemplary.bin
 
 # ---------------------------------------------------------------------------- #
 #                                   GENERATED                                  #
