Use class definition file
 - add single structure with all class details
 - includes id, color and default flag
 - use a singleton for label config to avoid complex import dependencies
 - load on first initialization and change of label folder
 - make work for object detection
 - move label parameter from config.ini to _classes.json

Integrate coloring

 - update class definition schema
 - integrate loader into label io
 - define schema for class definitions
 - just use RGB colors
 - finish the change class color context action
 - improve class config

Update docs

--- a/config.ini
+++ b/config.ini
@@ -1,11 +1,13 @@
 [MODE]
-segmentation = True
+segmentation = False
 
 [FILE]
 ; source of point clouds
 pointcloud_folder = pointclouds/
 ; sink for label files
 label_folder = labels/
+; definition of classes and export format
+class_definitions = labels/_classes.json
 ;2d image folder
 image_folder = pointclouds/
 
