--- a/labelCloud/resources/default_config.ini
+++ b/labelCloud/resources/default_config.ini
@@ -1,8 +1,15 @@
+[MODE]
+segmentation = False
+
 [FILE]
 ; source of point clouds
 pointcloud_folder = pointclouds/
 ; sink for label files
 label_folder = labels/
+; definition of classes and export format
+class_definitions = labels/_classes.json
+;2d image folder
+image_folder = pointclouds/
 
 [POINTCLOUD]
 ; drawing size for points in point cloud
@@ -15,12 +22,12 @@ colorless_colorize = True
 std_translation = 0.03
 ; standard step for zooming (for scrolling)
 std_zoom = 0.0025
+; blend the color with segmentation labels
+color_with_label = True
+; mix ratio between label colors and rgb colors
+label_color_mix_ratio = 0.3
 
 [LABEL]
-; format for exporting labels. choose from (vertices, centroid_rel, centroid_abs, kitti)
-label_format = centroid_abs
-; default object class for new bounding boxes
-std_object_class = cart
 ; number of decimal places for exporting the bounding box parameter.
 export_precision = 8
 ; default length of the bounding box (for picking mode)
@@ -49,10 +56,12 @@ show_orientation = True
 background_color = 100, 100, 100
 ; number of decimal places shown for the parameters of the active bounding box
 viewing_precision = 2
-; near and far clipping plane for OpenGL (where objects are visible, in meter)
-near_plane=0.1
-far_plane=300
+; near and far clipping plane for opengl (where objects are visible, in meter)
+near_plane = 0.1
+far_plane = 300
 ; keep last perspective between point clouds
 keep_perspective = False
 ; show button to visualize related images in a separate window
 show_2d_image = False
+; delete the bounding box after assigning the label to the points
+delete_box_after_assign = True
