Read labels and color the points in opengl

--- a/config.ini
+++ b/config.ini
@@ -1,6 +1,5 @@
 [MODE]
 segmentation = true
-label_folder = labels/
 
 [FILE]
 ; source of point clouds
@@ -21,6 +20,10 @@ colorless_colorize = True
 std_translation = 0.03
 ; standard step for zooming (for scrolling)
 std_zoom = 0.0025
+; blend the color with segmentation labels
+color_with_label = True
+; mix ratio between label colors and rgb colors
+label_color_mix_ratio = 0.3
 
 [LABEL]
 ; format for exporting labels. choose from (vertices, centroid_rel, centroid_abs, kitti)
