--- a/config.ini
+++ b/config.ini
@@ -21,7 +21,7 @@ std_translation = 0.03
 ; standard step for zooming (for scrolling)
 std_zoom = 0.0025
 ; blend the color with segmentation labels
-color_with_label = True
+color_with_label = False
 ; mix ratio between label colors and rgb colors
 label_color_mix_ratio = 0.3
 
