implement core label assignment logic

--- a/config.ini
+++ b/config.ini
@@ -21,7 +21,7 @@ std_translation = 0.03
 ; standard step for zooming (for scrolling)
 std_zoom = 0.0025
 ; blend the color with segmentation labels
-color_with_label = False
+color_with_label = True
 ; mix ratio between label colors and rgb colors
 label_color_mix_ratio = 0.3
 
@@ -29,7 +29,7 @@ label_color_mix_ratio = 0.3
 ; format for exporting labels. choose from (vertices, centroid_rel, centroid_abs, kitti)
 label_format = centroid_abs
 ; list of object classes for autocompletion in the text field
-object_classes = cart, box
+object_classes = cart, person, wall
 ; default object class for new bounding boxes
 std_object_class = cart
 ; number of decimal places for exporting the bounding box parameter.
