add PyOpenGL-accelerate in setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -53,6 +53,7 @@ install_requires =
     open3d
     PyOpenGL
     PyQt5
+    PyOpenGL-accelerate
 python_requires = >=3.6
 
 [options.entry_points]
