Blend point colors with labels (#97)
* link labels with PointCloud object

* Blend point rgb colors with its label colors

* Read labels and color the points in opengl

* Fix the colorless logic and make color blending a button

* Fix the initial check status in action_colorwithlabel

* fix colorless logic

* Make point_size, color_with_label properties of PointCloud

* helper function for label stats and print the stats after loading

* Fix the name of the Z-rotation option

* add PyOpenGL-accelerate in setup.cfg

* rename labels to segmentation_labels in PointCloud constructor

--- a/setup.cfg
+++ b/setup.cfg
@@ -54,6 +54,7 @@ install_requires =
     PyOpenGL
     PyOpenGL-accelerate
     PyQt5
+    PyOpenGL-accelerate
 python_requires = >=3.6
 
 [options.entry_points]
