--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -22,11 +22,15 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip setuptools wheel
-        pip install flake8
         pip install .[tests]
 
     - name: Check black formatting
       uses: psf/black@stable
+
+    - name: Lint with mypy
+      run: |
+        pip install mypy PyQt5-stubs types-pkg-resources types-setuptools
+        mypy labelCloud/.
 
     - name: Test with pytest
       run: |
