Add types to please mypy (#93)
* Add type hints to the whole project
 - remove flake8 from github pipeline
 - future linter will by mypy
 - add custom types

* Update configs
 - add rules for mypy and imports to ignore
 - setup mypy in github pipeline
 - Lint only last version

* Update requirements

* Drop get child

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,3 +4,16 @@ requires = [
     "wheel"
 ]
 build-backend = "setuptools.build_meta"
+
+[tool.mypy]
+plugins = "numpy.typing.mypy_plugin"
+exclude = [
+    'tests',
+]
+
+[[tool.mypy.overrides]]
+module = [
+    "OpenGL.*",
+    "open3d.*"
+]
+ignore_missing_imports = true
