--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -22,18 +22,16 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip setuptools wheel
-        pip install flake8
         pip install .[tests]
-
-    - name: Lint with flake8
-      run: |
-        # stop the build if there are Python syntax errors or undefined names
-        flake8 . --count --select=E9,F63,F7,F82 --ignore=C901 --show-source --statistics
-        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
 
     - name: Check black formatting
       uses: psf/black@stable
+
+    - name: Lint with mypy
+      if: ${{ matrix.python-version == '3.9' }}  # only lint last Python version
+      run: |
+        pip install mypy PyQt5-stubs types-pkg-resources types-setuptools
+        mypy labelCloud/.
 
     - name: Test with pytest
       run: |
