Use dropdown list instead of editbox for box classes

--- a/config.ini
+++ b/config.ini
@@ -1,5 +1,5 @@
 [MODE]
-segmentation = true
+segmentation = false
 
 [FILE]
 ; source of point clouds
@@ -28,8 +28,6 @@ label_color_mix_ratio = 0.3
 [LABEL]
 ; format for exporting labels. choose from (vertices, centroid_rel, centroid_abs, kitti)
 label_format = centroid_abs
-; list of object classes for autocompletion in the text field
-object_classes = cart, box
 ; default object class for new bounding boxes
 std_object_class = cart
 ; number of decimal places for exporting the bounding box parameter.
