find points inside a box and update their labels and colors

--- a/config.ini
+++ b/config.ini
@@ -1,5 +1,5 @@
 [MODE]
-segmentation = false
+segmentation = True
 
 [FILE]
 ; source of point clouds
@@ -65,3 +65,5 @@ far_plane = 300
 keep_perspective = False
 ; show button to visualize related images in a separate window
 show_2d_image = False
+; delete the bounding box after assigning the label to the points
+delete_box_after_assign = False
