--- a/config.ini
+++ b/config.ini
@@ -21,7 +21,7 @@ std_translation = 0.03
 ; standard step for zooming (for scrolling)
 std_zoom = 0.0025
 ; blend the color with segmentation labels
-color_with_label = False
+color_with_label = True
 ; mix ratio between label colors and rgb colors
 label_color_mix_ratio = 0.3
 
@@ -66,4 +66,4 @@ keep_perspective = False
 ; show button to visualize related images in a separate window
 show_2d_image = False
 ; delete the bounding box after assigning the label to the points
-delete_box_after_assign = False
+delete_box_after_assign = True
