Assign point labels and write back (#104)
* Use dropdown list instead of editbox for box classes

* not ignore labels/schema

* mypy and black

* change to_open3d_point_cloud, to_point_cloud to staticmethod-s

* find points inside a box and update their labels and colors

* move assign_point_label_in_box to pcd_manager

* add illustration for p0, p1, p2, p3

* lint

* connect button to the assignment logic

* Use save labels to save segmentation labels

* Disabled the assign button when not in segmentation mode

* change enabled to visable for assign button

* hide color_with_label in box mode

* move assign_point_label_in_active_box to bbox_controller

* log box assignment

* simplify and add docstring to update_selected_points_in_label_vbo

* update QComboBox#current_class_dropdown according to the suggestion

* remove unused *args and **kwargs in BaseSegmentationHandler._create_labels

--- a/config.ini
+++ b/config.ini
@@ -1,5 +1,5 @@
 [MODE]
-segmentation = false
+segmentation = True
 
 [FILE]
 ; source of point clouds
@@ -21,7 +21,7 @@ std_translation = 0.03
 ; standard step for zooming (for scrolling)
 std_zoom = 0.0025
 ; blend the color with segmentation labels
-color_with_label = False
+color_with_label = True
 ; mix ratio between label colors and rgb colors
 label_color_mix_ratio = 0.3
 
@@ -65,3 +65,5 @@ far_plane = 300
 keep_perspective = False
 ; show button to visualize related images in a separate window
 show_2d_image = False
+; delete the bounding box after assigning the label to the points
+delete_box_after_assign = True
