Move config params
 - move label parameter from config.ini to _classes.json
 - add set methods to LabelConfig

--- a/config.ini
+++ b/config.ini
@@ -1,5 +1,5 @@
 [MODE]
-segmentation = True
+segmentation = False
 
 [FILE]
 ; source of point clouds
@@ -26,10 +26,6 @@ color_with_label = True
 label_color_mix_ratio = 0.3
 
 [LABEL]
-; format for exporting labels. choose from (vertices, centroid_rel, centroid_abs, kitti)
-label_format = centroid_abs
-; default object class for new bounding boxes
-std_object_class = cart
 ; number of decimal places for exporting the bounding box parameter.
 export_precision = 8
 ; default length of the bounding box (for picking mode)
@@ -67,3 +63,4 @@ keep_perspective = False
 show_2d_image = False
 ; delete the bounding box after assigning the label to the points
 delete_box_after_assign = True
+
