--- a/config.ini
+++ b/config.ini
@@ -1,11 +1,12 @@
 [MODE]
-segmentation = True
+segmentation = False
 
 [FILE]
 ; source of point clouds
 pointcloud_folder = pointclouds/
 ; sink for label files
 label_folder = labels/
+class_definitions = labels/_classes.json
 ;2d image folder
 image_folder = pointclouds/
 
