Fix mypy and integration
 - adapt to new mypy rules
 - monkeypatch to make integration tests work
 - fix tests and formatting

Fix packaging

 - add segmentation io module
 - add _classes.json to exemplary files

--- a/labelCloud/resources/default_config.ini
+++ b/labelCloud/resources/default_config.ini
@@ -1,6 +1,3 @@
-[MODE]
-segmentation = False
-
 [FILE]
 ; source of point clouds
 pointcloud_folder = pointclouds/
@@ -28,6 +25,10 @@ color_with_label = True
 label_color_mix_ratio = 0.3
 
 [LABEL]
+; format for exporting labels. choose from (vertices, centroid_rel, centroid_abs, kitti)
+label_format = centroid_abs
+; default object class for new bounding boxes
+std_object_class = cart
 ; number of decimal places for exporting the bounding box parameter.
 export_precision = 8
 ; default length of the bounding box (for picking mode)
