--- a/setup.cfg
+++ b/setup.cfg
@@ -38,6 +38,7 @@ packages =
     labelCloud.io
     labelCloud.io.labels
     labelCloud.io.pointclouds
+    labelCloud.io.segmentations
     labelCloud.labeling_strategies
     labelCloud.model
     labelCloud.resources
@@ -63,7 +64,7 @@ console_scripts =
 tests = pytest; pytest-qt
 
 [options.package_data]
-labelCloud.resources = *.ini, *.pcd, *.txt
+labelCloud.resources = *.ini, *.pcd, *.txt, *.json
 labelCloud.resources.examples = *.json, *.ply
 labelCloud.resources.icons = *.ico, *.png, *.svg, *.txt
 labelCloud.resources.interfaces = *.ui
