Add label propagation
 - add a feature to carry over labels to the next point cloud
 - can be activated via config and menu action
 - will only copy labels if the next point cloud has no bounding boxes so far
 - add checkbox to settings dialog
 - add to documentation

Closes: #120

--- a/config.ini
+++ b/config.ini
@@ -45,6 +45,8 @@ std_rotation = 0.5
 std_scaling = 0.03
 ; minimum value for the length, width and height of a bounding box
 min_boundingbox_dimension = 0.01
+; propagate labels to next point cloud if it has no labels yet
+propagate_labels = False
 
 [USER_INTERFACE]
 ; only allow z-rotation of bounding boxes. set false to also label x- & y-rotation
