--- a/labelCloud/resources/default_config.ini
+++ b/labelCloud/resources/default_config.ini
@@ -5,7 +5,9 @@ pointcloud_folder = pointclouds/
 label_folder = labels/
 ; definition of classes and export format
 class_definitions = labels/_classes.json
-;2d image folder
+; sink for segmentation files (*.bin point clouds) [optional]
+segmentation_folder = labels/segmentation/
+; 2d image folder [optional]
 image_folder = pointclouds/
 
 [POINTCLOUD]
@@ -13,22 +15,20 @@ image_folder = pointclouds/
 point_size = 4.0
 ; point color for colorless point clouds (r,g,b)
 colorless_color = 0.9, 0.9, 0.9
-; colerize colorless point clouds by height value
+; colerize colorless point clouds by height value [optional]
 colorless_colorize = True
 ; standard step for point cloud translation (for mouse move)
 std_translation = 0.03
 ; standard step for zooming (for scrolling)
 std_zoom = 0.0025
-; blend the color with segmentation labels
+; blend the color with segmentation labels [optional]
 color_with_label = True
-; mix ratio between label colors and rgb colors
+; mix ratio between label colors and rgb colors [optional]
 label_color_mix_ratio = 0.3
 
 [LABEL]
 ; format for exporting labels. choose from (vertices, centroid_rel, centroid_abs, kitti)
 label_format = centroid_abs
-; default object class for new bounding boxes
-std_object_class = cart
 ; number of decimal places for exporting the bounding box parameter.
 export_precision = 8
 ; default length of the bounding box (for picking mode)
@@ -60,9 +60,9 @@ viewing_precision = 2
 ; near and far clipping plane for opengl (where objects are visible, in meter)
 near_plane = 0.1
 far_plane = 300
-; keep last perspective between point clouds
+; keep last perspective between point clouds [optional]
 keep_perspective = False
-; show button to visualize related images in a separate window
+; show button to visualize related images in a separate window [optional]
 show_2d_image = False
-; delete the bounding box after assigning the label to the points
+; delete the bounding box after assigning the label to the points [optional]
 delete_box_after_assign = True
