Add calib_folder config
 - add location of folder with calibration files to config
 - add exception handling and reporting for missing calib file

--- a/config.ini
+++ b/config.ini
@@ -5,6 +5,8 @@ pointcloud_folder = pointclouds/
 label_folder = labels/
 ; definition of classes and export format
 class_definitions = labels/_classes.json
+; only for kitti: calibration file for each point cloud
+calib_folder = calib/
 ; sink for segmentation files (*.bin point clouds) [optional]
 segmentation_folder = labels/segmentation/
 ; 2d image folder [optional]
