Set default and label format
 - add combobox to startup to set default label
   - reacts to label list
 - add combobox to startup to set label format
   - reacts to current labeling mode
 - refactor dialog components to custom widgets
 - add enums for label formats and modes

Closes: #127
Closes: #128

Co-authored-by: Ching-yu Lin <cyl@chingyulin.com>

--- a/setup.cfg
+++ b/setup.cfg
@@ -48,6 +48,7 @@ packages =
     labelCloud.tests
     labelCloud.utils
     labelCloud.view
+    labelCloud.view.startup
 install_requires =
     numpy
     open3d
