--- a/setup.cfg
+++ b/setup.cfg
@@ -35,6 +35,7 @@ packages =
     labelCloud
     labelCloud.control
     labelCloud.definitions
+    labelCloud.definitions.label_formats
     labelCloud.io
     labelCloud.io.labels
     labelCloud.io.pointclouds
