Hot fix example mode
 - add propagate_labels option to default_config
 - fix label and class config
 - fix default config
 - stricter version requirements

--- a/setup.cfg
+++ b/setup.cfg
@@ -51,11 +51,11 @@ packages =
     labelCloud.view
     labelCloud.view.startup
 install_requires =
-    numpy
+    numpy>1.20.0
     open3d
     PyOpenGL
     PyOpenGL-accelerate
-    PyQt5
+    PyQt5>=5.15.7 
 python_requires = >=3.7
 
 [options.entry_points]
