--- a/labelCloud/resources/default_config.ini
+++ b/labelCloud/resources/default_config.ini
@@ -45,6 +45,8 @@ std_rotation = 0.5
 std_scaling = 0.03
 ; minimum value for the length, width and height of a bounding box
 min_boundingbox_dimension = 0.01
+; propagate labels to next point cloud if it has no labels yet
+propagate_labels = False
 
 [USER_INTERFACE]
 ; only allow z-rotation of bounding boxes. set false to also label x- & y-rotation
