--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -22,7 +22,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip setuptools wheel
-        pip install .[tests]
+        pip install -r requirements.txt
 
     - name: Check black formatting
       uses: psf/black@stable
@@ -30,7 +30,6 @@ jobs:
     - name: Lint with mypy
       if: ${{ matrix.python-version == '3.9' }}  # only lint last Python version
       run: |
-        pip install mypy PyQt5-stubs types-pkg-resources types-setuptools
         mypy labelCloud/.
 
     - name: Test with pytest
