--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,7 @@ pytest~=7.3.1
 pytest-qt~=4.2.0
 
 # Development
-black~=23.1.0
+black>=23.1.0
 mypy~=1.3.0
 PyQt5-stubs~=5.15.6
 types-setuptools~=67.8.0
