--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-numpy>=1.21.6
+numpy>=1.21.6,<2.0.0  # Avoids binary incompatibility error.
 open3d>=0.15.2
-PyOpenGL==3.1.6  # prevents 'NoneType' object has no attribute 'glGetError'
+PyOpenGL==3.1.6  # Prevents 'NoneType' object has no attribute 'glGetError'.
 PyOpenGL-accelerate~=3.1.5
 PyQt5~=5.15.7
 
@@ -12,5 +12,4 @@ pytest-qt~=4.2.0
 black>=23.1.0
 mypy~=1.3.0
 PyQt5-stubs~=5.15.6
-types-setuptools~=67.8.0
-types-pkg-resources~=0.1.3
+types-setuptools~=71.1.0
