--- a/setup.cfg
+++ b/setup.cfg
@@ -51,7 +51,7 @@ packages =
     labelCloud.view
     labelCloud.view.startup
 install_requires =
-    numpy>1.20.0
+    numpy>1.20.0,<2.0.0
     open3d
     PyOpenGL
     PyOpenGL-accelerate
