--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -8,6 +8,7 @@ nav:
     - 'configuration.md'
     - 'shortcuts.md'
     - 'conventions.md'
+    - 'tutorials.md'
 
 theme:
   name: material
@@ -33,3 +34,6 @@ extra:
       link: https://de.linkedin.com/in/christophsager
     - icon: fontawesome/brands/twitter 
       link: https://twitter.com/ch_sager
+
+extra_css:
+  - assets/extra.css
