--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -8,7 +8,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest]  # macos-latest has OpenGL import error
-        python-version: ["3.8", "3.9"]  # "3.10" wait for Open3D support
+        python-version: ["3.9"]  # "3.10" wait for Open3D support
 
     steps:
     - name: Get repository
